# schedaddle

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  job.py  pyproject.toml  sender.py  test_job.py
src/: job.py  sender.py  server.py
src/server/: routes.py  scheduler.py  server.py
tests/end2end/: job.py  jobs.txt
